--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,17 +58,17 @@ android {
 
     sourceSets {
         main {
-            java.srcDirs = [
-                    'src/main/java',
-                    'src/common/java',
-                    'src/debug/java',
-                    'src/release/java',
-                    'src/staging/java',
-                    'src/preproduction/java',
-                    'src/androidTest/java',
-                    'src/androidTest/java',
-            ]
+            java.srcDirs 'src/main/java'
         }
+
+        androidTest {
+            setRoot 'src/tests/java'
+        }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
 }
@@ -79,6 +79,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:23.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
